<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/ic_action_cancel"
            android:backgroundTint="@color/black" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:textColor="@color/color_1E2432"
            android:textSize="34dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter"
            android:textColor="@color/color_1E2432"
            android:textSize="17dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:layout_marginTop="30dp"/>

        <com.example.easygo_travelapp.customView.CTEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvDetail"
            android:layout_marginTop="30dp"
            app:title="@string/email" />


        <TextView
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:background="@drawable/shape_button_login"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>