<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OnboardActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.viewpager.widget.ViewPager>

    <TextView
        android:id="@+id/getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:background="@drawable/shape_button_login"
        android:backgroundTint="@color/red"
        android:paddingHorizontal="74dp"
        android:paddingVertical="12dp"
        android:text="@string/get_started"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/black"
            android:textSize="17dp" />
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabPager"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            app:tabIndicatorColor="@color/white"
            />

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="17dp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>