<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_F7F8FA"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent">

            <com.example.easygo_travelapp.customView.CTToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:cardCornerRadius="100dp"
                    android:layout_gravity="center">
                    <ImageView
                        android:scaleType="fitXY"
                        android:id="@+id/imgAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp">

<!--                    <TextView-->
<!--                        android:id="@+id/tvLogin"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/log_in"-->
<!--                        android:textColor="@color/color_1E2432"-->
<!--                        android:textSize="20dp"-->
<!--                        android:textStyle="bold"-->
<!--                        android:drawableEnd="@drawable/ic_next"-->
<!--                        android:drawablePadding="10dp"-->
<!--                        android:gravity="bottom"-->
<!--                        android:visibility="gone" />-->
                    <TextView
                        android:id="@+id/tvFullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_1E2432"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:drawableEnd="@drawable/ic_next"
                        android:drawablePadding="10dp"
                        android:gravity="bottom" />

                    <TextView
                        android:id="@+id/tvVipMember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vip_member"
                        android:textColor="@color/white"
                        android:textSize="11dp"
                        android:drawableStart="@drawable/ic_vip"
                        android:drawableTint="@color/white"
                        android:background="@drawable/shape_button_login"
                        android:backgroundTint="@color/red"
                        android:paddingHorizontal="10dp"
                        android:gravity="center"
                        android:layout_marginTop="14dp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shape_line"
            android:backgroundTint="@color/color_E4E4E4"
            app:layout_constraintTop_toBottomOf="@id/appBar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            app:layout_constraintTop_toBottomOf="@id/appBar">

        <LinearLayout
            android:id="@+id/layout_menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="30dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            app:layout_constraintTop_toBottomOf="@id/appBar">

            <TextView
                android:id="@+id/nav_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_notifications"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:text="@string/notifications" />

            <TextView
                android:id="@+id/nav_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_credit_card"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:text="@string/my_cards" />

            <TextView
                android:id="@+id/nav_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:text="@string/language"
                app:drawableStartCompat="@drawable/ic_language" />

            <TextView
                android:id="@+id/nav_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_dollar_2"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:text="@string/currency" />

            <TextView
                android:id="@+id/nav_termAndCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:drawableStart="@drawable/ic_question"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:text="@string/terms_amp_conditions" />

            <TextView
                android:id="@+id/nav_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_security_2"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:text="@string/privacy_policy" />

            <TextView
                android:id="@+id/nav_help_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_headphones"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:text="@string/help_center" />

            <TextView
                android:id="@+id/nav_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_info"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:text="@string/about_us" />
        </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shape_line"
            android:backgroundTint="@color/color_E4E4E4"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_F7F8FA"
            app:itemIconTint="@color/bnv_tab_item_foreground"
            app:itemTextColor="@color/bnv_tab_item_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/menu_nav_bottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/layout_header_nav"
        app:menu="@menu/menu_nav" />


</androidx.drawerlayout.widget.DrawerLayout>