<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PhoneVerificationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bg_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_verification"
            android:textColor="@color/white"
            android:textSize="34dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbYourPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/your_phone_"
            android:textColor="@color/white"
            android:textSize="17dp"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/tvYourPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="17dp"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/lbYourPhone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/bg_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSend">

        <TextView
            android:id="@+id/lbEnterCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_4"
            android:textColor="@color/color_1E2432"
            android:textSize="17dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.example.easygo_travelapp.customView.CTGroupInputOTP
            android:id="@+id/grCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lbEnterCode"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/lbIHaveAProblem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/i_have_a_pr"
            android:textColor="@color/color_1E2432"
            android:textSize="17dp"
            app:layout_constraintTop_toBottomOf="@id/grCode"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageButton
        android:id="@+id/btnSend"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_button_circle"
        android:src="@drawable/ic_action_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>